--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
 
         <div class="container01-01">
           <div class="item01">
-            <a href="../Mobile App/01_Omikuji/omikuji.html" title="今日の運勢を占うゲームです。"><img src="img/sakura.jpg" alt="おみくじ１"><br>おみくじ１</a>
+            <a href="../mobileapp/01_Omikuji/omikuji.html" title="今日の運勢を占うゲームです。"><img src="img/sakura.jpg" alt="おみくじ１"><br>おみくじ１</a>
           </div>
           <div class="item01">
-            <a href="../Mobile App/10a_Omikuji/omikuji.html" title="音付きです。"><img src="img/omikuji2.png" alt="おみくじ２" class="img_omikuji2"><br>おみくじ２</a>
+            <a href="../mobileapp/10a_Omikuji/omikuji.html" title="音付きです。"><img src="img/omikuji2.png" alt="おみくじ２" class="img_omikuji2"><br>おみくじ２</a>
           </div>
           <div class="item01">
-            <a href="../Mobile App/10b_Omikuji/omikuji.html" title="テキストも画像です。"><img src="img/omikuji3.png" alt="おみくじ３"><br>おみくじ３</a>
+            <a href="../mobileapp/10b_Omikuji/omikuji.html" title="テキストも画像です。"><img src="img/omikuji3.png" alt="おみくじ３"><br>おみくじ３</a>
           </div>
           <div class="item01">
-            <a href="../Mobile App/01_omikuji_kimetsu/omikuji_kimetsu.html" title="鬼滅の刃"><img src="img/zenitsu.png" alt="鬼滅の刃おみくじ"><br>鬼滅の刃<br>おみくじ</a>
+            <a href="../mobileapp/01_omikuji_kimetsu/omikuji_kimetsu.html" title="鬼滅の刃"><img src="img/zenitsu.png" alt="鬼滅の刃おみくじ"><br>鬼滅の刃<br>おみくじ</a>
           </div>
         </div>
         
         <div class="container01-02">
           <div class="item01">
-            <a href="../Mobile App/03_04_calculator/calculator.html" title="かんたんな計算機です。"><img src="img/calc1.jpg" alt="計算機１"><br>計算機１</a>
+            <a href="../mobileapp/03_04_calculator/calculator.html" title="かんたんな計算機です。"><img src="img/calc1.jpg" alt="計算機１"><br>計算機１</a>
           </div>
           
           <div class="item01">
@@ -97,4 +97,5 @@
     </footer>
 
   </body>
+
 </html>
